General cleanup and UI improvements
Moslty just look at the diffs.

- added side navigation from Trend Micro 🤯
- broke out a bunch of stuff to separate files and also collapsed some stuff that didn't really need to be in separate files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Journeys",
+  "name": "Journeys - Branching Case Studies",
   "icons": [
     {
       "src": "favicon.ico",
