--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "dns": "^0.2.2",
+    "install": "^0.12.2",
     "ioredis": "^4.2.0",
+    "npm": "^6.8.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
+    "styled-components": "^4.1.3",
     "thunk": "0.0.1"
   },
   "scripts": {
@@ -29,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
