--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"thunk": "0.0.1"
 	},
 	"scripts": {
-		"preinstall": "npm install",
+		"prestart": "npm install",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
