--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^1.2.15",
-		"@fortawesome/free-solid-svg-icons": "^5.7.2",
+		"@fortawesome/fontawesome-svg-core": "^1.2.17",
+		"@fortawesome/free-solid-svg-icons": "^5.8.1",
 		"@fortawesome/react-fontawesome": "^0.1.4",
-		"@material-ui/core": "^3.3.2",
+		"@material-ui/core": "^3.9.3",
 		"@material-ui/icons": "^3.0.1",
 		"@trendmicro/react-sidenav": "^0.4.5",
 		"dns": "^0.2.2",
 		"install": "^0.12.2",
-		"ioredis": "^4.2.0",
-		"npm": "^6.8.0",
-		"react": "^16.6.0",
-		"react-dom": "^16.6.0",
+		"ioredis": "^4.9.0",
+		"npm": "^6.9.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
 		"react-redux": "^6.0.0",
+		"react-router-dom": "^5.0.0",
 		"react-scripts": "2.1.1",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"request": "^2.88.0",
-		"styled-components": "^4.1.3",
+		"styled-components": "^4.2.0",
 		"thunk": "0.0.1"
 	},
 	"scripts": {
